# EvoTradeX-DeepMeld

./: README.md  package-lock.json  package.json  pyproject.toml
PredictionModel/Clustering_Fuzzification/: DIC.py  EFCM.py  FKCN.py  FuzzyArt.py  TopoART_GA.py
PredictionModel/RL_Agent/: agent.py  environment.py  main.py  memory.py  networks.py
PredictionModel/SeroFam/: logic.py
PredictionModel/TransformerModel/: model.py
data/historical_price_daily/: AAPL_historical_prices.csv  ABT_historical_prices.csv  AVGO_historical_prices.csv  AXP_historical_prices.csv  BRK.B_historical_prices.csv  BX_historical_prices.csv  CRM_historical_prices.csv  CVX_historical_prices.csv  GOOGL_historical_prices.csv  GOOG_historical_prices.csv  GS_historical_prices.csv  IBM_historical_prices.csv  JNJ_historical_prices.csv  KO_historical_prices.csv  LIN_historical_prices.csv  LLY_historical_prices.csv  MA_historical_prices.csv  MCD_historical_prices.csv  MSFT_historical_prices.csv  NFLX_historical_prices.csv  NVDA_historical_prices.csv  ORCL_historical_prices.csv  PEP_historical_prices.csv  PM_historical_prices.csv  TMUS_historical_prices.csv  T_historical_prices.csv  WFC_historical_prices.csv  top_50_tickers.txt
data_download/: expert_system.py  fundamentals.py  historical_price_data.py  insider_information.py  multimodal_data_fusion.py  news_sentiment.py  social_media_sentiment.py  technical_indicatiors.py
feature engineering/: historical_price_data.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
(+129 files in other folders)
